--- a/board_app/Makefile
+++ b/board_app/Makefile
@@ -5,12 +5,12 @@ ARCH	= arm64
 PROC	= aarch64
 TYPE	= linux-gnu
 CC	= $(PROC)-$(TYPE)-gcc
-CCFLAGS	= # -static
+CCFLAGS	= -static
 STRIP	= $(PROC)-$(TYPE)-strip
 
 UNAME 	= $(shell uname -r)
-#KDIR	= /home/projects/gerstl/ece382m/plnx_kernel
-KDIR	= /usr/src/plnx_kernel
+KDIR	= /home/projects/gerstl/ece382m/plnx_kernel
+#KDIR	= /usr/src/plnx_kernel
 KFLAGS	= -DDEBUG # -DNO_DTS
 
 obj-m	= fpga_drv.o
